--- a/helloweb/src/main/webapp/WEB-INF/web.xml
+++ b/helloweb/src/main/webapp/WEB-INF/web.xml
@@ -11,4 +11,14 @@
     <welcome-file>hello.htm</welcome-file>
     <welcome-file>hello.jsp</welcome-file>
   </welcome-file-list>
+  
+  <servlet>
+    <servlet-name>HelloServlet</servlet-name>
+    <servlet-class>com.bit2020.helloweb.controller.HelloServlet</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+    <servlet-name>HelloServlet</servlet-name>
+    <url-pattern>/hello</url-pattern>
+  </servlet-mapping>
 </web-app>
