--- a/pom.xml
+++ b/pom.xml
@@ -60,5 +60,6 @@
 		<module>helloweb</module>
 		<module>emaillist01</module>
 		<module>guestbook01</module>
+		<module>guestbook02</module>
 	</modules>
 </project>
